[project]
name = "plande"
version = "0.1.0"
description = "Dynamic planning agent framework with uv-based packaging."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zheng Zhang"}
]
dependencies = [
    "pydantic>=2.7,<3.0",
    "typing-extensions>=4.10,<5.0",
    "httpx>=0.27,<0.28",
    "loguru>=0.7,<0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5.0,<0.6.0",
    "mypy>=1.10,<2.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.ruff.isort]
known-first-party = ["plande_agent"]

[tool.pytest.ini_options]
addopts = "-ra --cov=plande_agent --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["plande_agent"]
